--- a/projects/vs10/dunemaps.vcxproj
+++ b/projects/vs10/dunemaps.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\appDuneMaps.cpp" />
-    <ClCompile Include="..\..\src\dialogDuneMaps.cpp" />
+    <ClCompile Include="..\..\src\frameDuneMaps.cpp" />
     <ClCompile Include="..\..\src\dune\dune.cpp" />
     <ClCompile Include="..\..\src\dune\eastwood\CpsFile.cpp" />
     <ClCompile Include="..\..\src\dune\eastwood\Decode.cpp" />
@@ -48,10 +48,11 @@
     <ClCompile Include="..\..\src\dune\resources.cpp" />
     <ClCompile Include="..\..\src\dune\screenPlayfield.cpp" />
     <ClCompile Include="..\..\src\panelSurface.cpp" />
+    <ClCompile Include="..\..\src\toolbarButtonObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\appDuneMaps.h" />
-    <ClInclude Include="..\..\src\dialogDuneMaps.h" />
+    <ClInclude Include="..\..\src\frameDuneMaps.h" />
     <ClInclude Include="..\..\src\dune\dune.hpp" />
     <ClInclude Include="..\..\src\dune\eastwood\CpsFile.h" />
     <ClInclude Include="..\..\src\dune\eastwood\Decode.h" />
@@ -85,6 +86,7 @@
     <ClInclude Include="..\..\src\dune\stdafx.h" />
     <ClInclude Include="..\..\src\dune\types.h" />
     <ClInclude Include="..\..\src\panelSurface.h" />
+    <ClInclude Include="..\..\src\toolbarButtonObject.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{45F20872-01DA-4697-9509-C7DFDCE0E5E4}</ProjectGuid>
