--- a/projects/vs10/dunemaps.vcxproj.filters
+++ b/projects/vs10/dunemaps.vcxproj.filters
@@ -32,9 +32,6 @@
     <ClCompile Include="..\..\src\appDuneMaps.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\dialogDuneMaps.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\panelSurface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -122,12 +119,15 @@
     <ClCompile Include="..\..\src\dune\eastwood\WsaFile.cpp">
       <Filter>Source Files\eastwood</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\frameDuneMaps.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\toolbarButtonObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\appDuneMaps.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\dialogDuneMaps.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\panelSurface.h">
@@ -228,6 +228,12 @@
     </ClInclude>
     <ClInclude Include="..\..\src\dune\eastwood\WsaFile.h">
       <Filter>Source Files\eastwood</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\frameDuneMaps.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\toolbarButtonObject.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
