--- a/projects/vs10/dunemaps.vcxproj.filters
+++ b/projects/vs10/dunemaps.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="..\..\src\dune\engine\team.cpp">
       <Filter>Source Files\dune\engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\dialogHouses.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\appDuneMaps.h">
@@ -234,6 +237,9 @@
     </ClInclude>
     <ClInclude Include="..\..\src\dune\engine\team.h">
       <Filter>Source Files\dune\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\dialogHouses.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
