--- a/projects/vs10/dunemaps.vcxproj.filters
+++ b/projects/vs10/dunemaps.vcxproj.filters
@@ -128,6 +128,9 @@
     <ClCompile Include="..\..\src\dialogHouses.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\dialogBasics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\appDuneMaps.h">
@@ -239,6 +242,9 @@
       <Filter>Source Files\dune\engine</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\dialogHouses.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\dialogBasics.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
