team adding dialog

--- a/projects/vs10/dunemaps.vcxproj.filters
+++ b/projects/vs10/dunemaps.vcxproj.filters
@@ -134,6 +134,12 @@
     <ClCompile Include="..\..\src\dune\graphics\tools.cpp">
       <Filter>Source Files\dune\graphics</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\dialogTeams.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\dialogTeam.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\appDuneMaps.h">
@@ -252,6 +258,12 @@
     </ClInclude>
     <ClInclude Include="..\..\src\dune\graphics\tools.h">
       <Filter>Source Files\dune\graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\dialogTeams.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\dialogTeam.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
