--- a/projects/vs10/dunemaps.vcxproj
+++ b/projects/vs10/dunemaps.vcxproj
@@ -14,6 +14,8 @@
     <ClCompile Include="..\..\src\appDuneMaps.cpp" />
     <ClCompile Include="..\..\src\dialogBasics.cpp" />
     <ClCompile Include="..\..\src\dialogHouses.cpp" />
+    <ClCompile Include="..\..\src\dialogTeam.cpp" />
+    <ClCompile Include="..\..\src\dialogTeams.cpp" />
     <ClCompile Include="..\..\src\dune\engine\team.cpp" />
     <ClCompile Include="..\..\src\dune\graphics\tools.cpp" />
     <ClCompile Include="..\..\src\frameDuneMaps.cpp" />
@@ -57,6 +59,8 @@
     <ClInclude Include="..\..\src\appDuneMaps.h" />
     <ClInclude Include="..\..\src\dialogBasics.h" />
     <ClInclude Include="..\..\src\dialogHouses.h" />
+    <ClInclude Include="..\..\src\dialogTeam.h" />
+    <ClInclude Include="..\..\src\dialogTeams.h" />
     <ClInclude Include="..\..\src\dune\engine\team.h" />
     <ClInclude Include="..\..\src\dune\graphics\tools.h" />
     <ClInclude Include="..\..\src\frameDuneMaps.h" />
