--- a/projects/vs10/dunemaps.vcxproj.filters
+++ b/projects/vs10/dunemaps.vcxproj.filters
@@ -296,4 +296,7 @@
       <Filter>Source Files\dune\engine</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\dunemaps_icon.png" />
+  </ItemGroup>
 </Project>
